Fix header overflow

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -131,6 +131,7 @@
         width: auto;
         height: auto;
         opacity: 1;
+        overflow: visible;
 
         font-size: 1.2em;
         background: none;
